--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "14.17.5"
+  },
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js"
