--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "18.17.1"
+    "node": "18.17.1",
+    "npm":"10.2.4"
   },
   "scripts": {
     "dev": "vite",
