--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server/server.js",
   "engines": {
-    "node": "18.17.1"
+    "node": "18.17.1",
+    "npm":"10.2.4"
   },
   "scripts": {
     "start": "node server/server.js",
