--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "server/server.js",
   "engines": {
     "node": "18.17.1",
-    "npm":"10.2.4"
+    "npm": "10.2.4"
   },
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "build": "npm run build-client" 
   },
   "keywords": [],
   "author": "",
