--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "engines": {
     "node": "18.17.1",
-    "npm":"10.2.4"
+    "npm": "10.2.4"
   },
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon server.js",
+    "build-client": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "mongoose": "^7.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "vite": "^4.5.1"
   }
 }
