--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "npm run build-client" 
+    "build": "cd client && npm run build", 
+    "build-client": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
